--- a/ts/packages/agents/browser/src/extension/views/entityGraphView.html
+++ b/ts/packages/agents/browser/src/extension/views/entityGraphView.html
@@ -11,9 +11,9 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css"
       rel="stylesheet"
     />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/cytoscape/3.32.0/cytoscape.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/dagre/0.8.5/dagre.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/cytoscape-dagre/2.5.0/cytoscape-dagre.min.js"></script>
+    <script src="../vendor/cytoscape/cytoscape.min.js"></script>
+    <script src="../vendor/dagre/dagre.min.js"></script>
+    <script src="../vendor/cytoscape-dagre/cytoscape-dagre.min.js"></script>
     <link rel="stylesheet" href="entityGraphView.css" />
   </head>
   <body>
@@ -293,7 +293,7 @@
               </p>
               <button
                 class="btn btn-primary"
-                onclick="document.getElementById('mockScenarioSelect').focus()"
+                id="chooseScenarioBtn"
               >
                 Choose Scenario
               </button>
