--- a/ts/packages/agents/browser/src/extension/views/pageKnowledge.html
+++ b/ts/packages/agents/browser/src/extension/views/pageKnowledge.html
@@ -782,7 +782,7 @@
                 <span class="slider-label" data-value="0">Basic</span>
                 <span class="slider-label" data-value="1">Summary</span>
                 <span class="slider-label" data-value="2">Content</span>
-                <span class="slider-label" data-value="3">Actions</span>
+                <span class="slider-label" data-value="3">Macros</span>
                 <span class="slider-label" data-value="4">Full</span>
               </div>
 
